2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilClassDescriptor.cs: Added missing null check when
	  checking for base classes in FindEvent.

2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/libsteticui.mdp, libsteticui/Makefile.am: Added reference
	  to glib.
	* libsteticui/WidgetActionBar.cs, libstetic/CommandDescriptor.cs: Use
	  Menu size for command icons.
	* libsteticui/WidgetTreeCombo.cs: Replaced the popup widget menu by a
	  popup widget tree view. Fixes bug #81762.

2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Window.cs: Store the WindowPosition property in the
	  Window wrapper, since it may sometimes be changed by the embedder
	  widget.
	* libstetic/wrapper/objects.xml: Added default value for Widget.Events
	  property.
	* libstetic/wrapper/Dialog.cs: (Wrap) Don't initialize the HasSeparator
	  property if the provided instance is already initialized.

2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionMenuBar.cs, libstetic/editor/ActionMenu.cs:
	  When a menu bar loses the focus, reset the menu item selection
	  before hiding the submenus. Fixes bug #81761.

2007-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/StockIconSelectorItem.cs,
	  libstetic/editor/IconSelectorItem.cs: Added IntPtr constructors. It
	  seems to crash without them in some contexts.

2007-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: When saving write to a temporary file
	  first, just in case something fails.

2007-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilSignalDescriptor.cs,
	  libsteticui/CecilWidgetLibrary.cs: Properly handle generic event
	  handler types. Fixes bug #80783.

2007-05-19  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs,
	  libsteticui/WidgetDesigner.cs, libsteticui/Project.cs,